# kurz

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.toml
.github/workflows/: ci.yml  dependabot.yml
src/: api.rs  auth.rs  codegen.rs  config.rs  db.rs  lib.rs  main.rs  ui.rs
src/ui/: 404.html  index.html  login.html  style.css
