[package]
name = "kurz"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kurz"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

rand = "0.10"
uuid = { version = "1", features = ["v4"] }

rusqlite = { version = "0.38", features = ["bundled"] }

sha2 = "0.10"
hex = "0.4"

chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
time = "0.3"
tower-livereload = { version = "0.10.3", optional = true }

[profile.release]
opt-level = 3
lto = true

[features]
livereload = ["dep:tower-livereload"]
disable_auth = []
